RESOLVED FIXED134751
[iOS][WK2] subviews of the unscaled view drift out during CA animations
https://bugs.webkit.org/show_bug.cgi?id=134751
Summary [iOS][WK2] subviews of the unscaled view drift out during CA animations
Benjamin Poulain
Reported 2014-07-08 19:31:10 PDT
[iOS][WK2] subviews of the unscaled view drift out during CA animations
Attachments
Patch (13.33 KB, patch)
2014-07-08 21:20 PDT, Benjamin Poulain
enrica: review+
Benjamin Poulain
Comment 1 2014-07-08 21:20:32 PDT
WebKit Commit Bot
Comment 2 2014-07-08 21:24:56 PDT
Attachment 234618 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:356: More than one command on the same line [whitespace/newline] [4] ERROR: Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:356: Missing space before { [whitespace/braces] [5] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Benjamin Poulain
Comment 3 2014-07-08 23:17:39 PDT
Comment on attachment 234618 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=234618&action=review > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm:350 > + if ([UIView _isInAnimationBlock] && _page->editorState().selectionIsNone && ![_highlightView superview]) { For landing, I'll remove [_highlightView superview] and do [self _cancelInteraction] instead. Otherwise the tap highlight animation can still cause the ugly caret issue.
Benjamin Poulain
Comment 4 2014-07-09 12:25:51 PDT
Comment on attachment 234618 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=234618&action=review > Source/WebKit2/UIProcess/ios/WKContentViewInteraction.h:104 > + RetainPtr<UIView> _unscaledView; Fixme: Simon would prefer the name interactionViewsContainerView.
Enrica Casucci
Comment 5 2014-07-09 12:28:28 PDT
Comment on attachment 234618 [details] Patch Looks good to me.
Benjamin Poulain
Comment 6 2014-07-09 12:48:10 PDT
Note You need to log in before you can comment on or make changes to this bug.