Source/WebKit2/UIProcess/ios/WKContentViewInteraction.mm
@@ -138,6 +138,10 @@ const CGFloat minimumTapHighlightRadius = 2.0;
 - (void)didHandleWebKeyEvent;
 @end
 
+@interface UIView (UIViewInternalHack)
++ (BOOL)_addCompletion:(void(^)(BOOL))completion;
+@end
+
 @interface WKFormInputSession : NSObject <_WKFormInputSession>
 
 - (instancetype)initWithContentView:(WKContentView *)view userObject:(NSObject <NSSecureCoding> *)userObject;
@@ -212,14 +216,13 @@ static UIWebSelectionMode toUIWebSelectionMode(WKSelectionGranularity granularit
 
 - (void)setupInteraction
 {
-    if (!_inverseScaleRootView) {
-        _inverseScaleRootView = adoptNS([[UIView alloc] init]);
-        [_inverseScaleRootView setOpaque:NO];
-        [_inverseScaleRootView layer].anchorPoint = CGPointMake(0, 0);
+    if (!_interactionViewsContainerView) {
+        _interactionViewsContainerView = adoptNS([[UIView alloc] init]);
+        [_interactionViewsContainerView setOpaque:NO];
+        [_interactionViewsContainerView layer].anchorPoint = CGPointZero;
     }
-    [self addSubview:_inverseScaleRootView.get()];
-    CGFloat inverseScale = 1 / [[self layer] transform].m11;
-    [_inverseScaleRootView setTransform:CGAffineTransformMakeScale(inverseScale, inverseScale)];
+    [_interactionViewsContainerView setHidden:NO];
+    [self.layer addObserver:self forKeyPath:@"transform" options:NSKeyValueObservingOptionInitial context:nil];
 
     _touchEventGestureRecognizer = adoptNS([[UIWebTouchEventsGestureRecognizer alloc] initWithTarget:self action:@selector(_webTouchEventsRecognized:) touchDelegate:self]);
     [_touchEventGestureRecognizer setDelegate:self];
@@ -273,7 +276,8 @@ static UIWebSelectionMode toUIWebSelectionMode(WKSelectionGranularity granularit
     [_formInputSession invalidate];
     _formInputSession = nil;
     [_highlightView removeFromSuperview];
-    [_inverseScaleRootView removeFromSuperview];
+    [self.layer removeObserver:self forKeyPath:@"transform"];
+    [_interactionViewsContainerView setHidden:YES];
     [_touchEventGestureRecognizer setDelegate:nil];
     [self removeGestureRecognizer:_touchEventGestureRecognizer.get()];
 
@@ -330,18 +334,29 @@ static UIWebSelectionMode toUIWebSelectionMode(WKSelectionGranularity granularit
 
 - (UIView*)unscaledView
 {
-    return _inverseScaleRootView.get();
+    return _interactionViewsContainerView.get();
 }
 
 - (CGFloat)inverseScale
 {
-    return [[_inverseScaleRootView layer] transform].m11;
+    return 1 / [[self layer] transform].m11;
 }
 
-- (void)_updateUnscaledView
+- (void)observeValueForKeyPath:(NSString *)keyPath ofObject:(id)object change:(NSDictionary *)change context:(void *)context
 {
-    CGFloat inverseScale = 1 / [[self layer] transform].m11;
-    [_inverseScaleRootView setTransform:CGAffineTransformMakeScale(inverseScale, inverseScale)];
+    ASSERT([keyPath isEqualToString:@"transform"]);
+    ASSERT(object == self.layer);
+
+    if ([UIView _isInAnimationBlock] && _page->editorState().selectionIsNone) {
+        // If the utility views are not already visible, we don't want them to become visible during the animation since
+        // they could not start from a reasonable state.
+        // This is not perfect since views could also get updated during the animation, in practice this is rare and the end state
+        // remains correct.
+        [self _cancelInteraction];
+        [_interactionViewsContainerView setHidden:YES];
+        [UIView _addCompletion:^(BOOL){ [_interactionViewsContainerView setHidden:NO]; }];
+    }
+
     _selectionNeedsUpdate = YES;
     [self _updateChangedSelection];
     [self _updateTapHighlight];
@@ -369,7 +384,7 @@ static UIWebSelectionMode toUIWebSelectionMode(WKSelectionGranularity granularit
 
 - (UIView *)hitTest:(CGPoint)point withEvent:(::UIEvent *)event
 {
-    for (UIView *subView in [_inverseScaleRootView.get() subviews]) {
+    for (UIView *subView in [_interactionViewsContainerView.get() subviews]) {
         UIView *hitView = [subView hitTest:[subView convertPoint:point fromView:self] withEvent:event];
         if (hitView)
             return hitView;
@@ -584,7 +599,7 @@ static NSValue *nsSizeForTapHighlightBorderRadius(WebCore::IntSize borderRadius)
         [_highlightView setCornerRadius:minimumTapHighlightRadius];
     }
     [_highlightView layer].opacity = 1;
-    [_inverseScaleRootView addSubview:_highlightView.get()];
+    [_interactionViewsContainerView addSubview:_highlightView.get()];
     [self _updateTapHighlight];
 }
 
